# unlinked.biz

./: .env.template  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
programs/unlinked-profile/: Anchor.toml  Cargo.toml
programs/unlinked-profile/programs/unlinked-connections/: Cargo.toml
programs/unlinked-profile/programs/unlinked-connections/src/: lib.rs
programs/unlinked-profile/programs/unlinked-profile/: Cargo.toml
programs/unlinked-profile/programs/unlinked-profile/src/: lib.rs
programs/unlinked-profile/tests/: unlinked-profile.ts
src/: App.jsx  main.jsx
src/components/Hero/: Hero.jsx  Hero.module.scss
src/components/LandingSection/: LandingSection.jsx
src/components/LinkedInCallout/: LinkedInCallout.jsx  LinkedInCallout.module.scss
src/components/Navbar/: Navbar.jsx  Navbar.module.scss  WalletDropdown.jsx  WalletDropdown.module.scss
src/components/SearchOverlay/: SearchOverlay.jsx  SearchOverlay.module.scss
src/components/Section/: Section.jsx  Section.module.scss
src/components/Stats/: Stats.jsx
src/contexts/: WalletContext.jsx
src/hooks/: usePhantom.js  useProfileForm.js
src/pages/LandingPage/: LandingPage.jsx  LandingPage.module.scss
src/pages/NetworkPage/: NetworkPage.jsx  NetworkPage.module.scss
src/pages/NotificationsPage/: NotificationsPage.jsx  NotificationsPage.module.scss
src/pages/ProfilePage/: ProfilePage.jsx  (+1 more)
src/services/: connections.js  connectionsIdl.js  crypto.js  ipfs.js  profileIdl.js  solana.js
src/styles/: global.scss
