[package]
name = "unlinked-profile"
version = "0.1.0"
description = "Solana program for storing profile IPFS CIDs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unlinked_profile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
